Default properties file

--- a/surveyor-default.properties
+++ b/surveyor-default.properties
@@ -7,3 +7,6 @@ aha.clientid=
 aha.clientsecret=
 aha.clientdomain=localhost
 aha.host=test
+fluidsurveys.auth=
+fluidsurveys.clientid=
+fluidsurveys.clientsecret=
