Start fetching responses from S3

--- a/surveyor-default.properties
+++ b/surveyor-default.properties
@@ -10,3 +10,6 @@ aha.host=test
 fluidsurveys.auth=
 fluidsurveys.clientid=
 fluidsurveys.clientsecret=
+
+aws.secret.key=secret
+aws.access.key=access
